changed report config to use Eclipse Extension Points

--- a/accounting-reporting/build.properties
+++ b/accounting-reporting/build.properties
@@ -3,4 +3,12 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               config/
+               reports/,\
+               OSGI-INF/l10n/,\
+               OSGI-INF/,\
+               plugin.xml,\
+               schema/
+src.includes = schema/,\
+               reports/,\
+               lib/,\
+               build.xml,\
