added bundle version qualifiers

--- a/accounting-core/build.properties
+++ b/accounting-core/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
+generateFeatureVersionSuffix=true
 bin.includes = META-INF/,\
                .,\
                lib/log4j-1.2.13.jar,\
