--- a/accounting-ui/build.properties
+++ b/accounting-ui/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
+generateFeatureVersionSuffix=true
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
