--- a/accounting-reporting/build.properties
+++ b/accounting-reporting/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = bin/
+generateFeatureVersionSuffix=true
 bin.includes = META-INF/,\
                .,\
                lib/,\
